# acore_ami-project

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.rst  poetry-lock-hash.json  pyproject.toml  pyproject_ops.json  release-history.rst  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: main.yml
acore_ami/: __init__.py  ami_ops.py  api.py  builder.py  dynamodb.py  logger.py  workspace.py
docs/: Makefile  make.bat
docs/source/: conf.py
docs/source/01-Overview/: index.rst
docs/source/02-AMIs/: index.rst
docs/source/02-Setup-Local-Python-Development-Environment/: index.rst
packer_workspaces/: find_root_base_image_id.py  query.py  workflow_param.json
packer_workspaces/example/: complicated_script.py  complicated_script.sh  packer_build.py
packer_workspaces/s01-pyenv/: install_python_versions.sh  packer_build.py
packer_workspaces/s02-mysql/: create_image.py
packer_workspaces/s03_build_deps/: packer_build.py
tests/: all.py  test_api.py
workflow/: find_root_base_image_id.py  workflow_param.json
workflow/s01-pyenv/: README.rst  install_python_versions.sh  packer_build.py  step_param.json
workflow/s02-mysql/: README.rst  packer_build.py  step_param.json
workflow/s03-build_deps/: README.rst  export_build_deps_versions.py  export_build_deps_versions.sh  packer_build.py  step_param.json
workflow/s04-server_data/: README.rst  download_server_data.sh  step_param.json
workflow/s05-built_core/: README.rst  build_core.py  build_core.sh  packer_build.py  step_param.json
(+23 files in other folders)
