[tool.poetry]
name = "acore_ami"
version = "0.1.1"
description = "Tools for building and managing Amazon Machine Image (AMI) for AzerothCore WOTLK server."
authors = ["Sanhe Hu <husanhe@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.10"
aws_lambda_event = "2.0.2"
aws_console_url = "1.4.1"
botocore = "1.33.13"
boto3 = "1.33.13"
boto_session_manager = "1.7.2"
boltons = "21.0.0"
config_patterns = "1.0.6"
pathlib_mate = " 1.3.2"
s3pathlib = "2.1.2"
smart-open = "6.2.0"
superjson = "1.0.2"
pysecret = "2.2.4"
jinja2 = "3.0.3"
pynamodb = "6.0.0"
pynamodb_mate = "6.0.0.3"
simple_aws_ec2 = "0.6.2"


[tool.poetry.dev-dependencies]
# Don't put anything here, explicit is better than implicit


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
twine = "3.8.0"
wheel = "0.37.1"
rich = "12.6.0"
fire = "0.5.0"


[tool.poetry.group.doc]
optional = true


[tool.poetry.group.doc.dependencies]
Sphinx = "5.3.0"
sphinx-jinja = "2.0.2"
sphinx-copybutton = "0.5.1"
sphinx-design = "0.5.0"
furo = "2023.03.27"
nbsphinx = "0.8.12"
rstobj = "1.2.1"
pygments = "2.15.1"
ipython = "8.10.0"
docfly = "2.0.3"


[tool.poetry.group.test]
optional = true


[tool.poetry.group.test.dependencies]
pytest = "6.2.5"
pytest-cov = "2.12.1"


# --- addtitional dependencies for automation shell scripts
[tool.poetry.group.auto]
optional = true

[tool.poetry.group.auto.dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
